gccida/c3/calculate_dominance_info
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1052:59: error: must use 'enum' tag to refer to type 'cdi_direction'
void  calculate_dominance_info( int *idom, sbitmap *doms, cdi_direction reverse) 
                                                          ^
                                                          enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1198:44: error: use of undeclared identifier 'xmm'
si128 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x67FEA0); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1200:42: error: use of undeclared identifier 'xmm'
v10 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x67FEB0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1201:42: error: use of undeclared identifier 'xmm'
v11 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x67FEC0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1202:42: error: use of undeclared identifier 'xmm'
v12 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x67FED0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1203:42: error: use of undeclared identifier 'xmm'
v13 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x67FEE0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1204:42: error: use of undeclared identifier 'xmm'
v14 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x67FEF0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1205:42: error: use of undeclared identifier 'xmm'
v15 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x67FF00); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1206:42: error: use of undeclared identifier 'xmm'
v16 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x67FF10); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1207:42: error: use of undeclared identifier 'xmm'
v17 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x67FF20); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1226:44: error: use of undeclared identifier 'xmm'
si128 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x67FEA0); 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1233:42: error: use of undeclared identifier 'xmm'
v20 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x67FEB0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1234:42: error: use of undeclared identifier 'xmm'
v21 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x67FEC0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1261:42: error: use of undeclared identifier 'xmm'
v24 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x67FEA0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1263:42: error: use of undeclared identifier 'xmm'
v27 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x67FEB0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1264:42: error: use of undeclared identifier 'xmm'
v28 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x67FEC0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1265:42: error: use of undeclared identifier 'xmm'
v29 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x67FED0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1266:42: error: use of undeclared identifier 'xmm'
v30 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x67FEE0); 
                                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/dominance.c:1267:42: error: use of undeclared identifier 'xmm'
v31 = _mm_load_si128( ( const __m128i *)&xmm*(short *)0x67FEF0); 
                                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/calculate_dominance_info/src/obj/dominance.o] Error 1
